fix(Button): keep text white for dark mode for primary
Use CSS logical properties instead to improve RTL content direction

--- a/packages/bee-q/src/components/button/scss/bq-button.scss
+++ b/packages/bee-q/src/components/button/scss/bq-button.scss
@@ -8,7 +8,7 @@
   // Common button base style
   .bq-button {
     @apply box-border flex cursor-[inherit] items-center justify-center rounded-m border-2 border-solid border-transparent text-m font-medium leading-regular;
-    @apply transition-[background-color,border-color,color] duration-300;
+    @apply transition-[background-color,border-color,color] duration-300 ease-in-out;
     @apply disabled:cursor-not-allowed;
     @apply focus-visible:focus;
   }
@@ -28,7 +28,7 @@
 /* -------------------------------------------------------------------------- */
 
 .bq-button--primary {
-  @apply bg-ui-brand text-text-inverse;
+  @apply bg-ui-brand text-neutral-white;
   // Primary `HOVER` and `ACTIVE` state
   @apply hover:bg-ui-brand-hover active:bg-ui-brand-active;
   // Primary `DISABLED` state
@@ -48,7 +48,7 @@
 }
 
 .bq-button--primary.danger {
-  @apply bg-ui-danger text-text-inverse;
+  @apply bg-ui-danger text-neutral-white;
   // Primary danger `HOVER` and `ACTIVE` state
   @apply hover:bg-ui-danger-hover active:bg-ui-danger-active;
   // Primary danger `DISABLED` state
@@ -125,11 +125,11 @@
 }
 
 .bq-button.has-prefix .bq-button__label {
-  @apply pl-xs2;
+  @apply ps-xs2;
 }
 
 .bq-button.has-suffix .bq-button__label {
-  @apply pr-xs2;
+  @apply pe-xs2;
 }
 
 /* -------------------------------------------------------------------------- */
